--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 /* Con esto puedo establecer colores como variables */
-/* y usarlos en propiedades para que solo deba cambiar su valor aquí, */
-/* en lugar de tener que ir a cada propiedad a modificarlos, uno por uno */
-/* También puede hacerse con otros valores, como tamaños, etc */
+/* y usarlos en propiedades para que cualquier cambio deba realizarse unicamente en esta seccion */
+/* en lugar de tener que buscar y modificar cada propiedad que los utilice, una por una*/
+/* También puede hacerse con otros valores, como tamaños, fuentes, etc */
 :root {
   --blueFondo: #d0e3ec;
   --blueAcento: #677eb6;
   --blueFuerte: #3e4c70;
   --greyOperacion: rgb(239, 239, 239);
   --greyBotonHover: rgb(212, 212, 212);
+  --greenBoton: #61ff6c;
+  --greenBotonHover: #24a33d;
 }
 
 
@@ -58,7 +60,7 @@ header h2 {
 }
 
 
-/* instrucciones */
+/* instrucciones generales */
 .instrucciones {
   text-align: center;
   padding-top: 4vh;
@@ -110,7 +112,7 @@ main {
 }
 
 
-/* cuadro flotante para operacion en curso */
+/* ventana para operacion en curso */
 #operacion-en-curso {
   position: fixed;
   top: 60%;
@@ -169,7 +171,7 @@ main {
   background-color: var(--blueFondo);
 }
 
-/* utility*/
+/* utility */
 .hide {
   display: none;
 }
@@ -180,26 +182,25 @@ main {
 
 /* --------------------------->codigo Yann<--------------------------------- */
 
-#div-body{
-    background-color: #d0e3ec;
+#div-body {
+    background-color: var(--blueFondo);
     height:100vh;
     width: 100vw;
     margin:0;
     padding:0;
     display:flex;
     flex-direction: column;
-
-      /* acomoda los elementos en el eje x  */
-      justify-content: center;
-      /* acomoda los elementos en el eje y  */
-      align-items: center;
+    /* acomoda los elementos en el eje x  */
+    justify-content: center;
+    /* acomoda los elementos en el eje y  */
+    align-items: center;
     position: fixed;
 }
 
 
 
 
-#contenedorPrincipal{
+#contenedorPrincipal {
     margin-top:1%;
     border: 2px solid;
     height: 90vh;
@@ -214,36 +215,31 @@ main {
 }
 
 #titleText {
-    color: #FFFFFF;
-    background: #d0e3ec;
+    color: white;
+    background: var(--blueFondo);
     text-shadow: -5px 5px 0px #00e6e6, -10px 10px 0px #01cccc, -15px 15px 0px #00bdbd;
-    color: #FFFFFF;
-    background: #d0e3ec;
+    color: white;
+    background: var(--blueFondo);
     font-size: 80px;
-    font-family: Arial, Helvetica, sans-serif;
-
-    }
-
-
-.inputs{
+    font-family: Arial, Helvetica;
+}
 
 
-    display:flex;
+.inputs {
+    display: flex;
     flex-direction: column;
-
-
     /* acomoda los elementos en el eje x  */
     justify-content: center;
     /* acomoda los elementos en el eje y  */
     align-items: center;
     font-family: Arial;
-    font-size:2rem;
+    font-size: 2rem;
 }
 
 .button {
     font-family: Arial;
     font-weight: bold;
-    color: #000000;
+    color: black;
     font-size: 20px;
     padding: 10px;
     text-decoration: none;
@@ -253,8 +249,9 @@ main {
     -webkit-box-shadow: 0px 1px 3px #666666;
     -moz-box-shadow: 0px 1px 3px #666666;
     box-shadow: 0px 1px 3px #666666;
-    background: #61ff6c;
-  }
-  .button:hover {
-    background: #24a33d;
-  }
+    background: var(--greenBoton);
+}
+
+.button:hover {
+  background: var(--greenBotonHover);
+}
